# python-flask-healthz

./: .coveragerc  .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: verify.yaml
app/: app.py  config.py
app/health/: api.py  service.py
tests/: test_config.py  test_main.py
tests/health/: test_api.py  test_service.py
