[tool.poetry]
name = "python-flask-healthz"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "python_flask_healthz"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-flask = "^1.3.0"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
